[package]
name = "api_processor"
version = "0.1.0"
edition = "2018"

[dependencies]
hyper = { version = "0.14.29", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
structopt = "0.3"
rand = "0.8"
chrono = "0.4"
env_logger = "0.9"
tokio-stream = { version = "0.1", features = ["io-util"] }
pin-utils = "0.1.0"
